apps/homelab/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio
  namespace: portfolio
spec:
  type: ClusterIP
  selector:
    app: portfolio
  ports:
    - name: http
      port: 80
      targetPort: 4321
